# AdaptiveIR

./: .gitignore  CMakeLists.txt  README.md  bundle.txt  context-for-IA
.github/workflows/: build.yml
src/: Config.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/components/: EQCurveDisplay.h
src/dsp/: DynamicEQ.h  SpectralAnalyzer.h  TransientDetector.h  Utils.h
